...
        .init(code: "BKK", city: "Bangkok", identifier: "Asia/Bangkok", baseOffsetMinutes: 7 * 60),
        .init(code: "SIN", city: "Singapore", identifier: "Asia/Singapore", baseOffsetMinutes: 8 * 60),
        .init(code: "HKG", city: "Hong Kong", identifier: "Asia/Hong_Kong", baseOffsetMinutes: 8 * 60),
        .init(code: "BJS", city: "Beijing", identifier: "Asia/Shanghai", baseOffsetMinutes: 8 * 60),
        .init(code: "TPE", city: "Taipei", identifier: "Asia/Taipei", baseOffsetMinutes: 8 * 60),
        .init(code: "SEL", city: "Seoul", identifier: "Asia/Seoul", baseOffsetMinutes: 9 * 60),
        .init(code: "TYO", city: "Tokyo", identifier: "Asia/Tokyo", baseOffsetMinutes: 9 * 60),
        .init(code: "ADL", city: "Adelaide", identifier: "Australia/Adelaide", baseOffsetMinutes: 9 * 60 + 30),
        .init(code: "GUM", city: "Guam", identifier: "Pacific/Guam", baseOffsetMinutes: 10 * 60),
        .init(code: "SYD", city: "Sydney", identifier: "Australia/Sydney", baseOffsetMinutes: 10 * 60),
        .init(code: "NOU", city: "Noumea", identifier: "Pacific/Noumea", baseOffsetMinutes: 11 * 60),
        .init(code: "WLG", city: "Wellington", identifier: "Pacific/Auckland", baseOffsetMinutes: 12 * 60)
    ]
...
